--- a/6.latihan2 - suwit/index.html
+++ b/6.latihan2 - suwit/index.html
@@ -26,7 +26,7 @@
 	</div>
 
 
-	<div class="footer"><p>Credit for : <a href="http://youtube.com/c/webprogrammingUNPAS" target="_blank">WebProgrammingUNPAS;</a></p></div>
+	<footer><p>Credit for : <a href="http://youtube.com/c/webprogrammingUNPAS" target="_blank">WebProgrammingUNPAS;</a></p></footer>
 
 <script src="js/suwitJepang.js"></script>
 </body>
